<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Pet_Finder_App</string>

    <string name="default_location">123 Pham Van Dong</string>

    <string name="apply_before_for_a_gram_before_adoption">Apply for a gram before adoption</string>
    <string name="date_demo">08-09-2023</string>
    <string name="registration_date">Registration Date</string>
    <string name="color">Yellow, White, Black</string>
    <string name="color_text">Color</string>
    <string name="was_castracted">Was Castracted</string>
    <string name="status">Status</string>
    <string name="age">6</string>
    <string name="age_text">Age</string>
    <string name="can_adopt">Can Adopt</string>
    <string name="ready">Ready</string>
    <string name="yellow_cat">Yellow Cat</string>
    <string name="please_read_before_applying">Please read before applying</string>
    <string name="abandoned_pet">Abandoned pet</string>
    <string name="place_of_care">Place of care</string>
    <string name="tempory_care">Tempory care</string>
    <string name="adopt_a_animal">ADOPT A ANIMAL</string>
    <string name="searches">360 Searches</string>
    <string name="goong_map_api_key">6OoLOAQB3OS76dnadKCwV9BEzvJhpuieW07iA6Ii</string>
    <string name="google_map_key">AIzaSyAEzDdHbGPBI_hDEE-dIvFuGh0NoPKR4JM</string>

    <string-array name="category">
        <item android:label="choose">Choose type</item>
        <item android:label="cat">cat</item>
        <item android:label="dog">dog</item>
        <item android:label="turtle">turtle</item>
        <item android:label="hamster">hamster</item>
        <item android:label="rabbit">rabbit</item>
        <item android:label="duck">duck</item>
        <item android:label="others">others</item>
    </string-array>
    <string-array name="cat_breed">
        <item android:label="choose">Choose breed</item>
        <item>Persian</item>
        <item>Maine Coon</item>
        <item>Exotic</item>
        <item>Siamese</item>
        <item>Abyssinian</item>
        <item>Rag-doll</item>
        <item>Birman</item>
        <item>American Shorthaired</item>
        <item>Oriental</item>
        <item>Sphinx</item>
        <item>Others</item>
    </string-array>
    <string-array name="dog_breed">
        <item android:label="choose">Choose breed</item>
        <item>Bulldog</item>
        <item>Labrador retriever dog</item>
        <item>Golden retriever dog</item>
        <item>Husky dog</item>
        <item>Poodle dog</item>
        <item>Rottweiler dog</item>
        <item>Alaska dog</item>
        <item>American Shorthaired dog</item>
        <item>Beagle dog</item>
        <item>American Coca Cola Spaniel</item>
        <item>Jindo dog</item>
        <item>Others</item>
    </string-array>
    <string-array name="turtle_breed">
        <item android:label="choose">Choose breed</item>
        <item>Sea turtles</item>
        <item>Tortoise</item>
        <item>Snapping turtle</item>
        <item>Red-eared slider</item>
        <item>Painted turtle</item>
        <item>Others</item>
    </string-array>
    <string-array name="hamster_breed">
        <item android:label="choose">Choose breed</item>
        <item>Roborovski</item>
        <item>Campbell hamsters</item>
        <item>Syrian hamster</item>
        <item>Chinese hamster</item>
        <item>Others</item>
    </string-array>
    <string-array name="rabbit_breed">
        <item android:label="choose">Choose breed</item>
        <item>Flemish</item>
        <item>Netherland Dwarf</item>
        <item>Holland Lop</item>
        <item>Polish rabbit</item>
        <item>Others</item>
    </string-array>
    <string-array name="duck_breed">
        <item android:label="choose">Choose breed</item>
        <item>American Pekin</item>
        <item>Rouen duck</item>
        <item>Crested</item>
        <item>Khaki Campbell</item>
        <item>Others</item>
    </string-array>
    <string-array name="others_breed">
        <item android:label="choose">Choose breed</item>
        <item>Viet Nam</item>
        <item>Others</item>
    </string-array>
    <string-array name="color">
        <item android:label="choose">Choose color</item>
        <item android:label="color1">black</item>
        <item android:label="color2">white</item>
        <item android:label="color3">yellow</item>
        <item android:label="color3">brown</item>
        <item android:label="color4">others</item>
    </string-array>
    <string-array name="gender">
        <item android:label="choose">Choose gender</item>
        <item android:label="gender1">male</item>
        <item android:label="gender2">female</item>
    </string-array>
    <string-array name="size">
        <item android:label="choose">Choose size</item>
        <item android:label="size1">small</item>
        <item android:label="size2">medium</item>
        <item android:label="size3">large</item>
    </string-array>
    <string-array name="age">
        <item android:label="choose">Choose age</item>
        <item android:label="age1">baby</item>
        <item android:label="age2">young</item>
        <item android:label="age3">adult</item>
        <item android:label="age4">senior</item>
    </string-array>

    <string-array name="time">
        <item>1:00 -> 2:00</item>
        <item>2:00 -> 3:00</item>
        <item>3:00 -> 4:00</item>
        <item>5:00 -> 6:00</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>