<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdoptingPetActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:background="@android:color/transparent"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarArrowBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/arrow_back_ios_24" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bell" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_home"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/chat_vector" />

        <TextView
            android:id="@+id/title_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adopt_a_animal"
            android:layout_marginStart="88dp"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:layout_weight="0.3333"
                android:background="@drawable/rounded_item"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/notify1"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/please_read_before_applying"
                    android:textAlignment="textStart"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/inotify_img1"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/id_card"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="4dp"
                android:layout_weight="0.3333"
                android:background="@drawable/rounded_item"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/notify2"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/apply_before_for_a_gram_before_adoption"
                    android:textAlignment="textStart"
                    tools:ignore="NestedWeights" />

                <ImageView
                    android:id="@+id/notify_img2"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/id_card"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/nvg_ap4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:text="@string/abandoned_pet"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/nvg_pc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/place_of_care"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/nvg_ap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/tempory_care"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@drawable/stroke_layout">

                <TextView
                    android:id="@+id/result"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:layout_weight="1"
                    android:text="@string/searches" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    app:srcCompat="@drawable/filter" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/blue"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/add"
            app:tint="@color/white"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circular"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/dark_yellow"
            android:clickable="true"
            android:visibility="invisible"
            android:focusable="true"
            app:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/add_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/edit"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circular"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/dark_yellow"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            app:tint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/edit_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/favorate"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circular"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>